<?xml version="1.0" encoding="utf-8"?>
<!-- Bottom navigation menu items -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/tab_home"
        app:iconTint="@null" />

    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_search"
        android:title="@string/tab_search"
        app:iconTint="@null" />

    <item
        android:id="@+id/favoritesFragment"
        android:icon="@drawable/ic_favorite"
        android:title="@string/tab_favorites"
        app:iconTint="@null" />

    <item
        android:id="@+id/watchlistFragment"
        android:icon="@drawable/ic_watchlist"
        android:title="@string/tab_watchlist"
        app:iconTint="@null" />

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings"
        android:title="@string/tab_settings"
        app:iconTint="@null" />

</menu>